# D3DR

./: .gitignore  README.md  pyproject.toml  scene_info_example.json  train_everything.py
d3dr/: __init__.py  d3dr_pipeline.py  dn_config.py  dn_datamanager.py  dn_model.py  dn_model_combined.py  dn_model_voi.py  dn_pipeline.py  export_mesh.py  guidance_controller.py  random_cameras_datamanager_obj_scene.py  regularization_strategy.py
d3dr/custom_dataset/: apply_masks.py  pc_from_splat.py  run_sam2_image.py  run_sam2_video.py  update_transforms_after_scale.py
d3dr/data/: dn_dataset.py  ns_dn_dataparser.py
d3dr/diffusion/: __init__.py  sd3_utils.py  sd_utils.py  sd_utils_controlnet.py
d3dr/render_dataset/: add_textures_scenergbd.py  create_ply.py  dn_combined_init.sh  generate_all_textures.sh  indoor.sh  my_blender_apply_mask.py  my_blender_to_train.py  my_blender_to_train_job.sh  outdoor.run  rename_images_and_json.py  render_blender.py  render_indoor.py  render_outdoor_1.py  render_outdoor_2.py  render_outdoor_3.py  render_scenes.json  rendered_scenergbd_review.txt  rgba2rgb.py  run_all_synthetic.sh  utils.py
d3dr/scripts/: align_depth.py  create_real_oos.py  depth_from_pretrain.py  estimate_depths_and_normals.py  generate_camera_circle.py  generate_camera_on_sphere.py  generate_poses_look_at_obj.py  normals_from_pretrain.py  poses_to_colmap_sfm.py  real_to_scenenet.py  real_to_scenenet_before_3dgs.py  render_scene_lookat.py  transforms_2_camera_path.py
d3dr/utils/: average_sh_dir.py  (+6 more)
docs/: 2d_experiments.md  custom_dataset.md
notebooks/: D3DR.ipynb
(+31 files in other folders)
