[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d3dr"
description = "Object insertion using diffusion models"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8,<3.9"

dependencies = [
    "nerfstudio==1.1.3",
    "gsplat==1.0.0",
    "transformers>=4.46.3",
    "e3nn>=0.5.4",
    "diffusers==0.31.0",
    "tokenizers<=0.20.3",
    "omnidata-tools",
    "pytorch-lightning",
    "geffnet",
    "rerun-sdk",
    "pyrender",
    "natsort",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "accelerate>=1.0.1",
    "peft>=0.13.2",
    "setuptools==69.5.1",
    "torchmetrics==1.4.3",
    "sentencepiece>=0.2.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
igs2gs = {git = "https://github.com/cvachha/instruct-gs2gs.git"}

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.setuptools.packages.find]
include = ["d3dr*"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[project.entry-points.'nerfstudio.method_configs']
dn_splatter = 'd3dr.dn_config:dn_splatter'
dn_splatter_combined = 'd3dr.dn_config:dn_splatter_combined'
d3dr = 'd3dr.dn_config:d3dr'


[project.entry-points.'nerfstudio.dataparser_configs']
nsdn = 'd3dr:NSDNDataParserSpecification'

